test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/static_then_extern.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  static
  int
  identifier(foo)
  =
  const int(3)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  ;
  }
  extern
  int
  identifier(foo)
  ;
