test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/multi_storage_class_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  static
  extern
  int
  identifier(foo)
  =
  const int(0)
  ;
  return
  identifier(foo)
  ;
  }
